# himrep_iCubWorld

./: .gitignore  CMakeLists.txt
caffeCoder_iCubWorld/: CMakeLists.txt
caffeCoder_iCubWorld/app/: CMakeLists.txt
caffeCoder_iCubWorld/app/conf/: README.txt  caffeCoder.ini  imagenet_val.prototxt
caffeCoder_iCubWorld/images/: 00000133.ppm  00000134.ppm  00000135.ppm  00000136.ppm  00000137.ppm  00000138.ppm  registry_label.txt
caffeCoder_iCubWorld/src/: CMakeLists.txt  CMakeLists_findCaffe.txt  CaffeFeatExtractor.hpp  main.cpp
linearCLassifierModule_giulia/: CMakeLists.txt
linearCLassifierModule_giulia/include/: linearClassifierModule.h  linearClassifierThread.h
linearCLassifierModule_giulia/src/: linearClassifierModule.cpp  linearClassifierThread.cpp  main.cpp
linearClassifierModule_iCubWorld/: CMakeLists.txt  FindLibSVMLin.cmake
linearClassifierModule_iCubWorld/include/: RLSLinear.h  SVMLinear.h
linearClassifierModule_iCubWorld/src/: RLSLinear.cpp  SVMLinear.cpp  linearClassifierThread.cpp
sparseCoder_giulia/: CMakeLists.txt
sparseCoder_giulia/src/: CMakeLists.txt  DictionaryLearning.cpp  DictionaryLearning.h  FindSIFTGPU.cmake  SiftGPU_Extractor.cpp  SiftGPU_Extractor.h  main.cpp
sparseCoder_iCubWorld/: CMakeLists.txt
sparseCoder_iCubWorld/src/: CMakeLists.txt  SiftGPU_Extractor.h
